Prevent Featured photos from being flex-shrunk and cropped

--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,7 @@ a {
 
 .featured-item {
   position: relative;
+  flex: 0 0 auto;
   border-radius: 4px;
   overflow: hidden;
 }
